tests/core/snapshots/auth.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "htpasswd", src: ".htpasswd", type: Htpasswd)
@link(id: "jwks", src: "jwks.json", type: Jwks)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  data: String @expr(body: "data") @protected
}
