tests/core/snapshots/batching-default.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(batch: { delay: 10, headers: [] }, httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
  @http(
    url: "http://jsonplaceholder.typicode.com/users"
    batchKey: ["id"]
    query: [
      { key: "id", value: "{{.value.userId}}" }
      { key: "foo", value: "bar" }
    ]
  )
  userId: Int!
}

type Query {
  posts: [Post]
  @http(url: "http://jsonplaceholder.typicode.com/posts?id=11&id=3&foo=1")
}

type User {
  id: Int
  name: String
}
