tests/core/snapshots/batching-post.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(port: 8000, queryValidation: false)
@upstream(batch: { delay: 1, headers: [], maxSize: 1000 }, httpCache: 42)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts?id=1")
}

type User {
  id: Int
  name: String
}
