tests/core/snapshots/caching-collision.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(batch: { delay: 1, headers: [], maxSize: 1000 })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Bar {
  foo: Foo
  @http(url: "http://example.com/foo?id={{.value.id}}")
  @cache(maxAge: 300)
  id: String!
}

type Foo {
  id: Int!
}

type Query @cache(maxAge: 100) {
  bars: [Bar] @http(url: "http://example.com/bars")
}
